2002-07-10  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/ViewerGlut.cpp, src/lookat/lookat.cpp,
          src/openvrml/OpenVRML/Image.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Sun Forte
          compiler complains if callbacks passed to 'extern "C"'
          functions are not themselves 'extern "C"'.  Solution:  provide
          'extern "C"' typedefs and cast to them.

2002-07-09  Braden McDaniel  <braden@endoframe.com>

        * Added a boolean parameter to NodeType::createNode to indicate
          whether the new node will be part of a prototype definition.
          If the node will be part of a prototype definition, it should
          not be adding itself to the scene.

        * src/openvrml/OpenVRML/VrmlScene.cpp:  For
          VrmlScene::add[node], made the absence of the node in the
          scene's node lists a precondition.

2002-07-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlScene.cpp:  In the remove*Node
          methods, use find..erase rather than remove.  This should be
          more efficient; and it has the advantage of not producing a
          weird segfault.

2002-07-05  Braden McDaniel  <braden@endoframe.com>

        * Replaced VrmlNamespace with Scope. Scopes are owned by Nodes,
          and refcounted using ScopePtr.

2002-07-04  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/lookat.cpp:  Minor code cleanup.

2002-07-03  Braden McDaniel  <braden@endoframe.com>

        * src/lookat/lookat.cpp:  Code cleanup; delete the VrmlScene and
          Viewer atexit. (glut provides no mechanism for cleaning up
          resources when the window is closed.)

2002-07-01  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, README:  Incremented version to 0.12.4.

        * m4/glut.m4:  Added "-lXmu" to libs needed by glut.

        * NEWS:  Updates for 0.12.4 release.

        * m4/gl.m4:  Fixed bug in libGL detection macro (missing comma).
